add separate license for image assets

--- a/css/style.css
+++ b/css/style.css
@@ -557,13 +557,13 @@ table {
     right: 5rem;
     width: 3.8rem;
     height: 4.5rem;
-    background: url(../images/logo-ultranoir.svg) center top/contain;
+    background: url(../logos/logo-ultranoir.svg) center top/contain;
     background-repeat: no-repeat; }
   #intro footer .adobe-logo {
     right: 1rem;
     width: 2.7rem;
     height: 4.5rem;
-    background: url(../images/logo-adobe-bottom.svg) center bottom/contain; }
+    background: url(../logos/logo-adobe-bottom.svg) center bottom/contain; }
 
 @-webkit-keyframes fade {
   0% {
