--- a/css/_intro.scss
+++ b/css/_intro.scss
@@ -196,7 +196,7 @@
       right: 5rem;
       width: 3.8rem;
       height: 4.5rem;
-      background: url(../images/logo-ultranoir.svg) center top / contain;
+      background: url(../logos/logo-ultranoir.svg) center top / contain;
       background-repeat: no-repeat;
     }
 
@@ -204,7 +204,7 @@
       right: 1rem;
       width: 2.7rem;
       height: 4.5rem;
-      background: url(../images/logo-adobe-bottom.svg) center bottom / contain;
+      background: url(../logos/logo-adobe-bottom.svg) center bottom / contain;
     }
   }
 }
