--- a/css/style.css
+++ b/css/style.css
@@ -996,8 +996,10 @@ nav {
     height: 50em;
     left: 16em; }
     #scene3_2 .act1 .cat-shape5 {
-      float: right;
-      margin-top: 12.5rem;
+      position: absolute;
+      position: absolute;
+      right: 0rem;
+      top: 12rem;
       -webkit-shape-margin: 1rem;
       font-size: 1em; }
   #scene3_2 .act2 {
