--- a/css/style.css
+++ b/css/style.css
@@ -707,7 +707,7 @@ nav {
     box-sizing: border-box;
     margin-left: 37.5em;
     padding-top: 9em;
-    -webkit-shape-inside: polygon(0em 0em, 33em -0.06em, 33.13em 23.75em, 30em 23.88em, 28em 25.88em, 28em 28.75em, 32.88em 33em, 31.38em 37.5em, 27.75em 37.88em, 23.31em 42.56em, 22.56em 45.88em, 24.5em 46.81em, 21.19em 49.56em, 24em 53.13em, 27em 53.13em, 28.81em 61.13em, 26.31em 74.88em, 0em 75em, 0em 65.94em, 2em 58em, 11.94em 53.5em, 11.25em 49.69em, 8.75em 47.25em, 9.44em 44.94em, 1.81em 43.75em, 0em 40em, 6.38em 40em, 12.44em 38.5em, 15.75em 35.25em, 9.88em 35.25em, 8.69em 33.5em, 5.63em 31.75em, 10.75em 30.19em, 5.44em 28.75em, 3.44em 25.19em, 7.25em 23.75em, 4em 23.44em, 1em 20.63em, 2.88em 18.5em, 1.25em 15.63em, 5.63em 11.69em, 6.13em 6.94em, 3.25em 2.44em); }
+    -webkit-shape-inside: polygon(0em 0em, 33em -0.06em, 33.13em 23.75em, 30em 23.88em, 28em 25.88em, 28em 28.75em, 32.88em 33em, 31.38em 37.5em, 27.75em 37.88em, 23.31em 42.56em, 22.56em 45.88em, 24.5em 46.81em, 21.19em 49.56em, 24em 53.13em, 27em 53.13em, 28.81em 61.13em, 26.31em 74.88em, 0em 75em, 0em 65.94em, 2em 58em, 11.94em 53.5em, 11.25em 49.69em, 8.75em 47.25em, 9.44em 44.94em, 1.81em 43.75em, 0em 40em, 6.38em 40em, 12.44em 38.5em, 15.75em 35.25em, 9.88em 35.25em, 8.69em 33.5em, 5.63em 31.75em, 10.75em 30.19em, 5.44em 28.75em, 3.44em 25.19em, 7.25em 23.75em, 4em 23.44em, 1em 20.63em, 2.88em 18.5em, 1.25em 15.63em, 5.63em 11.69em, 6.13em 6.94em, 3.25em 2.44em) border-box; }
 
 #scene2 {
   width: 161em;
@@ -1159,7 +1159,7 @@ nav {
       -webkit-shape-inside: polygon(nonzero, 130px 58px, 76px 0px, 368px 0px, 324px 323px, 0px 320px, 0px 218px, 46px 187px, 90px 130px); }
 
 .cat-shape1 {
-  -webkit-shape-outside: polygon(0.69em -0.15em, 1.88em 1.13em, 3.63em 2.15em, 3.5em 3.6em, 4.09em 4.25em, 5.59em 3.56em, 5.88em 4.25em, 4.5em 5.44em, 3.72em 6.25em, 5.34em 7.25em, 6.03em 6.78em, 8.63em 7.38em, 10.6em 7.07em, 11.65em 6.78em, 12.31em 5.63em, 12.65em 7.19em, 13.38em 7.47em, 13.69em 8.65em, 14.81em 8.75em, 13.56em 9.94em, 12.78em 11.63em, 12.19em 13.69em, 10.03em 15.75em, 9.47em 15.38em, 5.84em 16.53em, 2.81em 15.78em, 1.09em 13.78em, 0.03em 11.35em, 1.56em 7.59em, 0.22em 6.22em, 0.97em 4.32em, 1.81em 2.97em, 0.94em 1.81em);
+  -webkit-shape-outside: polygon(0.69em -0.15em, 1.88em 1.13em, 3.63em 2.15em, 3.5em 3.6em, 4.09em 4.25em, 5.59em 3.56em, 5.88em 4.25em, 4.5em 5.44em, 3.72em 6.25em, 5.34em 7.25em, 6.03em 6.78em, 8.63em 7.38em, 10.6em 7.07em, 11.65em 6.78em, 12.31em 5.63em, 12.65em 7.19em, 13.38em 7.47em, 13.69em 8.65em, 14.81em 8.75em, 13.56em 9.94em, 12.78em 11.63em, 12.19em 13.69em, 10.03em 15.75em, 9.47em 15.38em, 5.84em 16.53em, 2.81em 15.78em, 1.09em 13.78em, 0.03em 11.35em, 1.56em 7.59em, 0.22em 6.22em, 0.97em 4.32em, 1.81em 2.97em, 0.94em 1.81em) border-box;
   background: url("../images/cat_falling1-05.png") top left no-repeat;
   background-size: contain;
   visibility: hidden;
