--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
  * limitations under the License.
  *
  */
-/* normalize.css v2.1.0 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -465,7 +465,7 @@ table {
   z-index: 7;
   box-sizing: border-box;
   width: 40rem;
-  height: 50%; }
+  height: 70%; }
   #intro::before {
     top: 0;
     right: 0;
