remove old content; redux for first scene

--- a/css/_intro.scss
+++ b/css/_intro.scss
@@ -28,7 +28,7 @@
   /* show glimpse of first scene and warning */
   #scene1,
   #intro .warning{
-    display: block;
+    // display: block;
   }
 
   /* prevent navigation */
