--- a/css/style.scss
+++ b/css/style.scss
@@ -105,7 +105,7 @@ Wrapping all content to prevent horizontal scrolling.
 
   shape-outside: $shape;
   -webkit-shape-outside: $shape;
-  
+
   // background: rgba(0, 255, 0, 0.6);
 }
 
@@ -150,4 +150,8 @@ h1{
   position: relative;
   height: 100%;
   padding-top: 1px; /* prevent margin-collapse from H1 */
+}
+
+.content p{
+  will-change: padding;
 }
