--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,22 @@ p + p{
   font-size: 1.2em;
 }
 
+.keyframes{
+  position: absolute;
+  z-index: 2;
+
+  div{
+    height: 100vh;
+    width: 10px;
+    background: yellow;
+  }
+
+  .keyframe--alice{
+    background: lime;
+  }
+}
+
+
 /*
 Scroll events don't trigger on vertical scrolling if overflow-x is applied to the body.
 Wrapping all content to prevent horizontal scrolling.
@@ -85,9 +101,10 @@ Wrapping all content to prevent horizontal scrolling.
   */
   height: 75em;
   width: 120em;
-  position: relative;
+  position: fixed;
   background: url(../images/bg_scn1.jpg) left top;
   background-size: 100%;
+
   @media all and (max-width: 1280px){
     margin-left: -18em;
   }
