--- a/css/style.scss
+++ b/css/style.scss
@@ -35,7 +35,7 @@ body{
 
 p{
   margin:0;
-  font-size: 1.1em;
+  font-size: 1.2em;
   line-height: 1.5;
   font-family: Georgia,serif;
 }
@@ -43,26 +43,6 @@ p{
 p + p{
   margin-top: 1.6em;
 }
-
-.wf-active p{
-  font-size: 1.2em;
-}
-
-.keyframes{
-  position: absolute;
-  z-index: 2;
-
-  div{
-    height: 100vh;
-    width: 10px;
-    background: yellow;
-  }
-
-  .keyframe--alice{
-    background: lime;
-  }
-}
-
 
 /*
 Scroll events don't trigger on vertical scrolling if overflow-x is applied to the body.
@@ -129,11 +109,8 @@ Wrapping all content to prevent horizontal scrolling.
 
 .scene--intro{
   @extend .scene;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  width: 100%;
+  height: 100%;
   color: #eee;
   text-align: center;
   -webkit-transition: opacity 0.5s ease-in;
@@ -141,22 +118,7 @@ Wrapping all content to prevent horizontal scrolling.
   -ms-transition: opacity 0.5s ease-in;
   transition: opacity 0.5s ease-in;
 
-  $bg: rgba(66, 66, 66, 0.9);
-
-  box-sizing: border-box;
-  width: 40rem;
-  height: 70%;
-
-  &::before{
-    top: 0;
-    right: 0;
-    z-index: -1;
-    position: fixed;
-    background: $bg;
-    content: ' ';
-    width: 100%;
-    height: 100%;
-  }
+  background: rgba(66, 66, 66, 0.9);
 
   &.hidden{
     display: none;
