--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,17 @@ p + p {
   margin-top: 1.6em; }
 
 /*
+The timeline-track is a placeholder to give the page height so scoll will work.
+Its height is set from JS as the largest maximum limit of all animations.
+*/
+.timeline-track {
+  position: absolute;
+  width: 20px;
+  top: 0;
+  z-index: 4;
+  background: lime; }
+
+/*
 Scroll events don't trigger on vertical scrolling if overflow-x is applied to the body.
 Wrapping all content to prevent horizontal scrolling.
 */
