--- a/css/style.css
+++ b/css/style.css
@@ -371,15 +371,13 @@ Wrapping all content to prevent horizontal scrolling.
   position: fixed; }
 
 .scene--intro {
-  z-index: 2;
-  opacity: 1; }
+  z-index: 2; }
 
 .scene--alice {
   z-index: 1; }
 
 .scene--outro {
-  z-index: 3;
-  opacity: 0; }
+  z-index: 3; }
 
 .scene--alice {
   /*
@@ -397,22 +395,15 @@ Wrapping all content to prevent horizontal scrolling.
 .scene--outro {
   width: 100%;
   height: 100%;
-  background: black; }
+  background: black;
+  visibility: hidden; }
 
 .scene--intro {
   width: 100%;
   height: 100%;
   color: #eee;
   text-align: center;
-  -webkit-transition: opacity 0.5s ease-in;
-  -moz-transition: opacity 0.5s ease-in;
-  -ms-transition: opacity 0.5s ease-in;
-  transition: opacity 0.5s ease-in;
   background: rgba(66, 66, 66, 0.9); }
-  .scene--intro.hidden {
-    display: none; }
-  .scene--intro.hide {
-    opacity: 0; }
   .scene--intro header span {
     display: block; }
   .scene--intro a, .scene--intro header span {
